seer-core/tests/snapshots/format_snapshots__human_tld_sparse_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: human ().format_tld (& fixture_tld_sparse())
---

[1;95mTLD Info: .example[0m
[37m──────────────────[0m
  [1;96mType[0m: [97mreserved[0m
  [1;96mWHOIS Server[0m: [1;93mnot available[0m
  [1;96mRDAP URL[0m: [1;93mnot available[0m
  [1;96mRegistry[0m: [1;93mnot available[0m
