seer-core/tests/snapshots/format_snapshots__markdown_availability_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: markdown ().format_availability (& fixture_availability())
---
## Availability: example.com

- **Result**: **TAKEN**
- **Confidence**: medium
- **Method**: whois
- **Details**: WHOIS returned registration data
