seer-core/tests/snapshots/format_snapshots__markdown_confusables_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 418
expression: markdown ().format_confusables (& fixture_confusables())
---
## Look-alikes: example.com

42 candidates generated, 2 registered.

| Domain | Technique | Registered | Registrar |
| --- | --- | --- | --- |
| examp1e.com | homoglyph | 2025-11-02 | Mock Registrar Inc. |
| exampel.com | transposition | — | — |
